--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
 					</a>
 				
-				
+
 				</div>
 			
 			</div>
@@ -127,13 +127,13 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
-				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Share your Joy of Game Art!</strong></h3>
+				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Not too late to Share your Joy of Game Art!</strong></h3>
 
 				<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
+					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Last Minute!</a>
 				</div>
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					Submissions close January 26th at 12:00pm EST. Finalists will be announced a few days after the deadline and will be invited to attend the in-person event on February 9th.
+					Submissions will still be accepted until 11:59pm.<br><br>The submission deadline ended January 26th at 12:00pm EST. Finalists will be announced a few days after the deadline and will be invited to attend the in-person event on February 9th.
 					<br>
 				</p>
 				<div class="countdown-cont align-center mb-5">
