updated website now that submissions are closed

--- a/index.html
+++ b/index.html
@@ -127,13 +127,15 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
-				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Not too late to Share your Joy of Game Art!</strong></h3>
+				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Prepare to Celebrate the Joy of Game Art!</strong></h3>
 
-				<div class="mbr-section-btn align-center mt-5">
+				<!--<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Last Minute!</a>
-				</div>
+				</div>-->
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					Submissions will still be accepted until 11:59pm.<br><br>The submission deadline ended January 26th at 12:00pm EST. Finalists will be announced a few days after the deadline and will be invited to attend the in-person event on February 9th.
+					<!--Submissions will still be accepted until 11:59pm.<br><br>The submission deadline ended January 26th at 12:00pm EST. -->
+					Submissions are closed! 
+					Finalists will be announced within the next few days and will be invited to attend the in-person event on February 9th.
 					<br>
 				</p>
 				<div class="countdown-cont align-center mb-5">
@@ -141,7 +143,7 @@
 					<div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
 					<div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
 					<div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
-					<div class="countdown" data-due-date="2024/01/26 12:00:00"></div>
+					<div class="countdown" data-due-date="2024/02/09 17:00:00"></div>
 				</div>
 
 
