--- a/2023.html
+++ b/2023.html
@@ -299,7 +299,7 @@
 					<div class="content-wrap">
 						<h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Zach
 							Schläppi</strong></h5>
-						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Art
+						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Studio Art
 							Director</strong><br><strong>Demiurge Studio</strong></h6>
 						
 						<div class="social-row display-7">
