--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-					<!--<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-					                        href="https://joyart.eventbrite.com">Eventbrite</a></li>-->
+					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+					                        href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797">Get Tickets!</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
@@ -105,13 +105,13 @@
 				<h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>JoyArt Boston 2024</strong></h1>
 				<p class="mbr-text mbr-fonts-style display-4">
 					JoyArt is an intercollegiate game art competition for connecting students with industry
-					professionals! Anyone who is currently a student (or was within the past 6 months) in the Boston
-					area is encouraged to submit - you don't need to make something new, and are welcome to submit
-					existing portfolio pieces. There will be a prize for each category winner.</p>
+					professionals! <!--Anyone who is currently a student (or was within the past 6 months) in the Boston
+					area was encouraged to submit - you don't need to make something new, and are welcome to submit
+					existing portfolio pieces.--> There will be a prize for each category winner. Come join us in Boston on February 9th at 5pm EST!</p>
 				<div class="mbr-section-btn mt-3">
-					<!--<a class="btn btn-white-outline display-4"
-				                                     href="https://joyart.eventbrite.com"
-				                                     target="_blank">Eventbrite</a>-->
+					<a class="btn btn-white-outline display-4"
+				                                     href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797"
+				                                     target="_blank">Get Tickets!</a>
 					<!--<a class="btn btn-white-outline display-4"
 					   href="https://joyart.devpost.com/project-gallery"
 					   target="_blank">Finalist Gallery</a> -->
@@ -149,8 +149,8 @@
 
 
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					The finalist event for JoyArt 2024 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00pm on February 9th. Check back in later to reserve tickets!
-					<br>Finalists must be in attendance to be considered for final judging.
+					The finalist event for JoyArt 2024 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00pm on February 9th. <!--Check back in later to reserve tickets!-->
+					<br>Finalists must be in attendance to be considered for final judging but everyone is welcome to attend!
 					<br><br>
 					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="http://tinyurl.com/joyart2024details" class="text-warning" target="_blank">JoyArt 2024 Details</a> </strong>document.
 				</p>
