unhid judges and replaced luigi with vlad

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 </section>
 
 
-	<!--
+
 <section data-bs-version="5.1" class="team1 cid-tv8scYdItz" id="team1-c">
 	
 	
@@ -449,22 +449,20 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="card-wrap">
 					<div class="image-wrap">
-						<img src="assets/images/judge-luigi-2.png" alt="Mobirise Website Builder">
+						<img src="assets/images/judge_vlad.jpg" alt="Mobirise Website Builder">
 					</div>
 					<div class="content-wrap">
-						<h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Luigi
-							Guatieri</strong></h5>
-						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Game Artist and
-							Designer</strong><br><strong>Mightier</strong></h6>
-						
+						<h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Vladimir Karashchuk</strong></h5>
+						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Technical Artist</strong><br><strong>Meta</strong></h6>
+
 						<div class="social-row display-7">
 							<div class="soc-item">
-								<a href="https://luigiland.carbonmade.com/" target="_blank">
+								<a href="https://goodspiderr.artstation.com/" target="_blank">
 									<span class="mbr-iconfont socicon-internet socicon"></span>
 								</a>
 							</div>
 							<div class="soc-item">
-								<a href="https://www.linkedin.com/in/luigi-guatieri-43896a37/" target="_blank">
+								<a href="https://www.linkedin.com/in/vladimirkarashchuk/" target="_blank">
 									<span class="mbr-iconfont socicon-linkedin socicon"></span>
 								</a>
 							</div>
@@ -478,7 +476,7 @@
 		</div>
 	</div>
 </section>
--->
+
 
 <section data-bs-version="5.1" class="image1 cid-tugRzwEODa" id="image1-7">
 	
