--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-					                        href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797">Get Tickets!</a></li>
+					<!--<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+					                        href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797">Get Tickets!</a></li>-->
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
@@ -107,20 +107,20 @@
 					JoyArt is an intercollegiate game art competition for connecting students with industry
 					professionals! <!--Anyone who is currently a student (or was within the past 6 months) in the Boston
 					area was encouraged to submit - you don't need to make something new, and are welcome to submit
-					existing portfolio pieces.--> There will be a $75 prize for each category winner and a $50 prize for the winner of the Popular Vote.<br>Come join us for our in person event in Boston on February 9th at 5pm EST!</p>
+					existing portfolio pieces.--> There will be a $75 prize for each category winner and a $50 prize for the winner of the Popular Vote.<br><br>Check out the winning submissions now!</p>
 				<div class="mbr-section-btn mt-3">
-					<a class="btn btn-white-outline display-4"
-				                                     href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797"
-				                                     target="_blank">Get Tickets!</a>
 					<!--<a class="btn btn-white-outline display-4"
-					   href="https://joyart.devpost.com/project-gallery"
-					   target="_blank">Finalist Gallery</a> -->
+				                                     href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797"
+				                                     target="_blank">Get Tickets!</a>-->
+					<a class="btn btn-white-outline display-4"
+					   href="https://joyart-2024.devpost.com/project-gallery"
+					   target="_blank">Finalist Gallery</a>
 					<a class="btn btn-white-outline display-4" href="index.html#image1-7">Want the Latest Info?</a></div>
 			</div>
 		</div>
 	</div>
 </section>
-
+<!--
 <section data-bs-version="5.1" class="countdown3 cid-tuM0QgRyIm" id="countdown3-a">
 	
 	
@@ -129,11 +129,11 @@
 			<div class="col-lg-8">
 				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Celebrate the Joy of Game Art!</strong></h3>
 
-				<!--<div class="mbr-section-btn align-center mt-5">
+				<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Last Minute!</a>
-				</div>-->
+				</div>
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					<!--Submissions will still be accepted until 11:59pm.<br><br>The submission deadline ended January 26th at 12:00pm EST. -->
+					Submissions will still be accepted until 11:59pm.<br><br>The submission deadline ended January 26th at 12:00pm EST.
 					Finalists have been chosen!
 					Join us for our in-person event on February 9th!
 					<br>
@@ -149,7 +149,7 @@
 
 
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					The finalist event for JoyArt 2024 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00pm on February 9th. <!--Check back in later to reserve tickets!-->
+					The finalist event for JoyArt 2024 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00pm on February 9th. Check back in later to reserve tickets!
 					<br>Finalists must be in attendance to be considered for final judging but everyone is welcome to attend!
 					<br><br>
 					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="http://tinyurl.com/joyart2024details" class="text-warning" target="_blank">JoyArt 2024 Details</a> </strong>document.
@@ -157,15 +157,16 @@
 
 
 
-				<!--<div class="mbr-section-btn align-center mt-5">
+				<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/project-gallery">Vote For People's Choice
 					Award</a>
-				</div>-->
+				</div>
 
 			</div>
 		</div>
 	</div>
 </section>
+-->
 
 <section data-bs-version="5.1" class="image4 cid-tuM2XnFszh mbr-fullscreen" id="image4-b">
 	
