--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					area was encouraged to submit - you don't need to make something new, and are welcome to submit
 					existing portfolio pieces. Students can be graduate or undergraduate.
 					<br/>There will be a $125 prize for each category winner and for the winner of the Popular Vote.
-					<br/>SUBMISSIONS CLOSE ON FEBUARY 14th AT 11:59pm
+					<br/>SUBMISSIONS CLOSED
 					</p>
 				<div class="mbr-section-btn mt-3">
 					<!--<a class="btn btn-white-outline display-4"
@@ -120,7 +120,7 @@
 					   href="https://joyart-2024.devpost.com/project-gallery"
 					   target="_blank">Finalist Gallery</a>-->
 					<a class="btn btn-white-outline display-4" href="https://discord.gg/U4pxkpGG6d">Want More Info Join Our Discord!</a>
-					<a class="btn btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSfyYYK7fqoGl_s5HaQ57-jhhI-LIG8Yw6-X9XRz8p1F08aw4Q/viewform?usp=dialog">Submission Form and details</a>
+<!--					<a class="btn btn-white-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSfyYYK7fqoGl_s5HaQ57-jhhI-LIG8Yw6-X9XRz8p1F08aw4Q/viewform?usp=dialog">Submission Form and details</a>-->
 				</div>
 
 			</div>
