--- a/2023.html
+++ b/2023.html
@@ -290,7 +290,7 @@
 		<div class="row justify-content-center">
 			<div class="col-12">
 				<h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
-					<strong>Judges</strong></h3>
+					<strong>Judges and Jury</strong></h3>
 			
 			</div>
 			<div class="col-sm-6 col-lg-4">
@@ -463,6 +463,28 @@
 							</div>
 						</div>
 					
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-sm-6 col-lg-4">
+				<div class="card-wrap">
+					<div class="image-wrap">
+						<img src="assets/images/IMG_8662.jpeg" alt="Mobirise Website Builder">
+					</div>
+					<div class="content-wrap">
+						<h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>
+							John Domenico Calvelli
+							</strong></h5>
+						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>
+							Assistant Professor of Game Design and Development
+							</strong><br><strong>Long Island University</strong></h6>
+
+						<div class="social-row display-7">
+							</strong><br><strong>Jury</strong>
+						</div>
+
 					</div>
 				</div>
 			</div>
