--- a/2024.html
+++ b/2024.html
@@ -76,7 +76,9 @@
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-											href="index.html">JoyArt 2025</a></li>
+											href="index.html">JoyArt 2026</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+                                            href="2025.html">JoyArt 2025</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 											href="2023.html">JoyArt 2023</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
