--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							<button type="submit" class="btn btn-secondary display-4">Send Message</button>
 						</div>
 					</div>
-				</form><!--Formbuilder Form-->
+				</form>
 			</div>
 			<div class="col-lg-6 offset-lg-1 col-12">
 				<div class="image-wrapper">
